added classes and more css to have visual example.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./main.js"></script>
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./header.css" />
+    <link rel="stylesheet" href="./skills.css" />
     <link rel="stylesheet" href="./mobile.css" />
     <link rel="stylesheet" href="./tablet.css" />
     <link rel="stylesheet" href="./desktop.css" />
@@ -20,11 +21,21 @@
           <p>&lt; Jesper Lindström &gt;</p>
         </div>
         <ul class="nav-items-list flex gap1 m1 p1 noliststyle">
-          <li class="nav-item">Home</li>
-          <li class="nav-item">About</li>
-          <li class="nav-item">Skills</li>
-          <li class="nav-item">Projects</li>
-          <li class="nav-item">CV</li>
+          <li class="nav-item p1 flex justify-center">
+            <a class="menu-link notextstyle" href="#">Home</a>
+          </li>
+          <li class="nav-item p1 flex justify-center">
+            <a class="menu-link notextstyle" href="#">About</a>
+          </li>
+          <li class="nav-item p1 flex justify-center">
+            <a class="menu-link notextstyle" href="#">Skills</a>
+          </li>
+          <li class="nav-item p1 flex justify-center">
+            <a class="menu-link notextstyle" href="#">Projects</a>
+          </li>
+          <li class="nav-item p1 flex justify-center cv-button">
+            <a class="menu-link notextstyle justify-center" href="#">CV</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -48,8 +59,16 @@
       </div>
     </div>
 
-    <div>
-      <p>placeholder for future content</p>
+    <div class="skills-container flex">
+      <h2>Skills</h2>
+      <div class="skill-img gap1">1</div>
+      <div class="skill-img gap1">2</div>
+      <div class="skill-img gap1">3</div>
+      <div class="skill-img gap1">4</div>
+      <div class="skill-img gap1">5</div>
+      <div class="skill-img gap1">6</div>
+      <div class="skill-img gap1">7</div>
+      <div class="skill-img gap1">8</div>
     </div>
   </body>
 </html>
