added skills section. html+css using grid.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./header.css" />
     <link rel="stylesheet" href="./skills.css" />
-    <link rel="stylesheet" href="./mobile.css" />
+    <!-- <link rel="stylesheet" href="./mobile.css" />
     <link rel="stylesheet" href="./tablet.css" />
-    <link rel="stylesheet" href="./desktop.css" />
+    <link rel="stylesheet" href="./desktop.css" /> -->
   </head>
   <body>
     <div class="header">
@@ -53,22 +53,29 @@
         </div>
       </div>
       <div class="split right flex justify-center align-center">
-        <div class="right-content just">
+        <div class="right-content flex column justify-center align-center p1">
           <img class="big-avatar" src="./images/Avatarbigger.png" alt="" />
+          <div class="icons-row p1"> <img src="./icons/giticon.svg" alt="">
+          <img src="./icons/linkedinicon.svg" alt=""></div>
+
         </div>
       </div>
     </div>
 
-    <div class="skills-container flex">
-      <h2>Skills</h2>
-      <div class="skill-img gap1">1</div>
-      <div class="skill-img gap1">2</div>
-      <div class="skill-img gap1">3</div>
-      <div class="skill-img gap1">4</div>
-      <div class="skill-img gap1">5</div>
-      <div class="skill-img gap1">6</div>
-      <div class="skill-img gap1">7</div>
-      <div class="skill-img gap1">8</div>
+    <div class="skills-container grid">
+      <h2 class="skills-headline grid justify-center align-center">Skills</h2>
+      
+        <div class="skill-item1 grid justify-center align-center"><img class="skill-image" src="./images/html5biggerlogo.svg" alt=""></div>
+        <div class="skill-item2 grid justify-center align-center"><img class="skill-image" src="./images/css3biggerlogo.svg" alt=""></div>
+        <div class="skill-item3 grid justify-center align-center"><img class="skill-image" src="./images/jsbiggerlogo.svg" alt=""></div>
+        <div class="skill-item4 grid justify-center align-center"><img class="skill-image" src="./images/Git-Logo-White.svg" alt=""></div>
+        <h2 class="learning-headline grid justify-center align-center">Upcoming</h2>
+        <div class="skill-item5 grid justify-center align-center"><img class="skill-image" src="./images/html5biggerlogo.svg" alt=""></div>
+        <div class="skill-item6 grid justify-center align-center"><img class="skill-image" src="./images/css3biggerlogo.svg" alt=""></div>
+        <div class="skill-item7 grid justify-center align-center"><img class="skill-image" src="./images/jsbiggerlogo.svg" alt=""></div>
+        <div class="skill-item8 grid justify-center align-center"><img class="skill-image" src="./images/Git-Logo-White.svg" alt=""></div>
+       
+      </div>
     </div>
   </body>
 </html>
