prepared for making mobile version

--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesper Lindström | Front end developer</title>
     <script src="./main.js"></script>
+    <script
+      src="https://kit.fontawesome.com/fd9786285b.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
+    <link rel="stylesheet" href="./styles/header-mobile.css" />
     <link rel="stylesheet" href="./styles/skills.css" />
     <!-- <link rel="stylesheet" href="./mobile.css" />
     <link rel="stylesheet" href="./tablet.css" />
     <link rel="stylesheet" href="./desktop.css" /> -->
   </head>
   <body>
-    <div class="header">
+    <header>
       <div class="nav-bar flex space-between">
-        <div class="user flex m1 p1 gap1">
+        <div class="user flex m1 p1 gap1 align-center">
           <img class="avatar" src="./images/avatarbigger.png" alt="" />
           <p class="my-name">Jesper Lindström</p>
+          <i class="burger-menu-button fa-solid fa-bars"></i>
         </div>
         <ul class="nav-items-list flex gap1 m1 p1">
           <li class="nav-item p1 flex justify-center">
@@ -30,12 +36,13 @@
           <li class="nav-item p1 flex justify-center">
             <a class="menu-link" href="#">Contact</a>
           </li>
+
           <li class="cv-button p1 flex justify-center">
             <a class="menu-link justify-center" href="#">CV</a>
           </li>
         </ul>
       </div>
-    </div>
+    </header>
 
     <div class="main-content flex">
       <div class="split left flex justify-center">
