same as last** just forgot to stage

--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,13 @@
         </div>
         <ul class="nav-items-list flex gap1 m1 p1">
           <li class="nav-item p1 flex justify-center">
-            <a class="menu-link" href="#">Home</a>
+            <a class="menu-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item p1 flex justify-center">
-            <a class="menu-link" href="projects.html">Projects</a>
+            <a class="menu-link" href="./projects.html">Projects</a>
           </li>
           <li class="nav-item p1 flex justify-center">
-            <a class="menu-link" href="contact.html">Contact</a>
+            <a class="menu-link" href="./contact.html">Contact</a>
           </li>
 
           <li class="cv-button p1 flex justify-center">
@@ -45,39 +45,38 @@
     <div class="main-content flex">
       <div class="split left flex justify-center">
         <div class="left-content flex column ali p1 m1">
-          <h1 class="p1">
-            <p id="changing-word"></p>
-            Developer
-          </h1>
-          <h3 class="p1">
-            Hi! I'm Jesper and I am studying to become a front end developer at
-            @Medieinstitutet in Gothenburg. This is where I will show my
-            progression through theese two years where I strive to become better
-            at web development.
-          </h3>
-          <div class="skills-wrapper flex justify-center p1">
-            <img
-              class="skill-image"
-              src="./images/html5biggerlogo.svg"
-              alt=""
-            />
-
-            <img class="skill-image" src="./images/css3biggerlogo.svg" alt="" />
-
-            <img class="skill-image" src="./images/jsbiggerlogo.svg" alt="" />
-
-            <img class="skill-image" src="./images/Git-Logo-White.svg" alt="" />
+          <div class="contact-container flex column">
+            <span class="contact-links p1"
+              >Email me @
+              <a href="mailto:jesperlindstrom10@gmail.com"
+                >Jesperlindstrom10@gmail.com</a
+              ></span
+            >
+            <span class="contact-links p1">
+              Linkedin @
+              <a
+                href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
+                ><img src="./icons/linkedinicon.svg" alt=""
+              /></a>
+            </span>
+            <span class="contact-links p1">
+              Github @
+              <a href="https://github.com/Jesper-Lindstrom"
+                ><img src="./icons/giticon.svg" alt=""
+              /></a>
+            </span>
           </div>
         </div>
       </div>
       <div class="split right flex justify-center align-center">
         <div class="right-content flex column justify-center align-center p1">
           <img class="big-avatar" src="./images/Avatarbigger.png" alt="" />
-          <div class="p1">
-            <a href="https://github.com/Jesper-Lindstrom"
+          <div class="icons-row p1">
+            <a class="contact-links" href="https://github.com/Jesper-Lindstrom"
               ><img src="./icons/giticon.svg" alt=""
             /></a>
             <a
+              class="contact-links"
               href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
               ><img src="./icons/linkedinicon.svg" alt=""
             /></a>
