completed project section.

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/header-mobile.css" />
-    <link rel="stylesheet" href="./styles/skills.css" />
+    <link rel="stylesheet" href="./styles/alternate-content.css" />
     <link rel="stylesheet" href="./styles/changing-word.css" />
   </head>
   <body>
@@ -36,7 +36,11 @@
           </li>
 
           <li class="cv-button p1 flex justify-center">
-            <a class="menu-link justify-center" href="#">CV</a>
+            <a
+              class="menu-link justify-center"
+              href="https://1drv.ms/w/s!AtHzcIn3gtY7g4MPm_eD1QPl5jf1Ug?e=2XigIQ"
+              >CV</a
+            >
           </li>
         </ul>
       </div>
@@ -45,8 +49,32 @@
     <div class="main-content flex">
       <div class="split left flex justify-center">
         <div class="left-content flex column ali p1 m1">
-          Projects goes here
-          <div class="project-container">Projects goes here</div>
+          <div class="project-container flex">
+            <div class="project-link flex column align-center m1">
+              <h2 class="project-title">The Journey</h2>
+              <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+                ><img
+                  class="project-image"
+                  src="./images/TheJourneyImg.png"
+                  alt=""
+              /></a>
+            </div>
+            <div class="project-link flex column align-center m1">
+              <h2 class="project-title">norrfällsviken</h2>
+              <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+                ><img
+                  class="project-image"
+                  src="./images/NorrfallsvikenImg.png"
+                  alt=""
+              /></a>
+            </div>
+            <div class="project-link flex column align-center m1">
+              <h2 class="project-title">My CV</h2>
+              <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+                ><img class="project-image" src="./images/CVimage.png" alt=""
+              /></a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="split right flex justify-center align-center">
