--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/header-mobile.css" />
-    <link rel="stylesheet" href="./styles/skills.css" />
+    <link rel="stylesheet" href="./styles/alternate-content.css" />
     <link rel="stylesheet" href="./styles/changing-word.css" />
   </head>
   <body>
@@ -26,7 +26,7 @@
         </div>
         <ul class="nav-items-list flex gap1 m1 p1">
           <li class="nav-item p1 flex justify-center">
-            <a class="menu-link" href="#">Home</a>
+            <a class="menu-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item p1 flex justify-center">
             <a class="menu-link" href="projects.html">Projects</a>
@@ -36,7 +36,11 @@
           </li>
 
           <li class="cv-button p1 flex justify-center">
-            <a class="menu-link justify-center" href="#">CV</a>
+            <a
+              class="menu-link justify-center"
+              href="https://1drv.ms/w/s!AtHzcIn3gtY7g4MPm_eD1QPl5jf1Ug?e=2XigIQ"
+              >CV</a
+            >
           </li>
         </ul>
       </div>
