minor improvements on css and working toggle function for header

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/header-mobile.css" />
     <link rel="stylesheet" href="./styles/alternate-content.css" />
-    <link rel="stylesheet" href="./styles/changing-word.css" />
   </head>
   <body>
     <header>
@@ -60,13 +59,13 @@
               Linkedin @
               <a
                 href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
-                ><img src="./icons/linkedinicon.svg" alt=""
+                ><img class="small-icon" src="./icons/linkedinicon.svg" alt=""
               /></a>
             </span>
             <span class="contact-links p1">
               Github @
               <a href="https://github.com/Jesper-Lindstrom"
-                ><img src="./icons/giticon.svg" alt=""
+                ><img class="small-icon" src="./icons/giticon.svg" alt=""
               /></a>
             </span>
           </div>
