fixed links for git demolink

--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,13 @@
       <div id="hidden" class="hidden flex align-center justify-center">
         <ul class="nav-items-list flex">
           <li class="hidden-nav-item p1 flex justify-center">
-            <a class="menu-link" href="/index.html">Home</a>
+            <a class="menu-link" href="./index.html">Home</a>
           </li>
           <li class="hidden-nav-item p1 flex justify-center">
-            <a class="menu-link" href="/projects.html">Projects</a>
+            <a class="menu-link" href="./projects.html">Projects</a>
           </li>
           <li class="hidden-nav-item p1 flex justify-center">
-            <a class="menu-link" href="/contact.html">Contact</a>
+            <a class="menu-link" href="./contact.html">Contact</a>
           </li>
         </ul>
       </div>
