--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     ></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
-    <!-- <link rel="stylesheet" href="./styles/header-mobile.css" /> -->
+   
     <link rel="stylesheet" href="./styles/alternate-content.css" />
   </head>
   <body>
@@ -58,51 +58,36 @@
       </div>
     </header>
 
-    <div class="main-content flex">
-      <div class="split left flex justify-center">
-        <div class="left-content flex column ali p1 m1">
-          <div class="project-container flex">
-            <div class="project-link flex column align-center m1">
-              <h2 class="project-title">The Journey</h2>
-              <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
-                ><img
-                  class="project-image"
-                  src="./images/TheJourneyImg.png"
-                  alt=""
-              /></a>
-            </div>
-            <div class="project-link flex column align-center m1">
-              <h2 class="project-title">norrfällsviken</h2>
-              <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
-                ><img
-                  class="project-image"
-                  src="./images/NorrfallsvikenImg.png"
-                  alt=""
-              /></a>
-            </div>
-            <div class="project-link flex column align-center m1">
-              <h2 class="project-title">My CV</h2>
-              <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
-                ><img class="project-image" src="./images/CVimage.png" alt=""
-              /></a>
-            </div>
-          </div>
+    <div class="project-content flex justify-center align-center">
+      <div class="project-container flex">
+        <div class="project-link flex column align-center m1">
+          <h2 class="project-title">The Journey</h2>
+          <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+            ><img
+              class="project-image"
+              src="./images/TheJourneyImg.png"
+              alt=""
+          /></a>
+        </div>
+        <div class="project-link flex column align-center m1">
+          <h2 class="project-title">norrfällsviken</h2>
+          <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+            ><img
+              class="project-image"
+              src="./images/NorrfallsvikenImg.png"
+              alt=""
+          /></a>
+        </div>
+        <div class="project-link flex column align-center m1">
+          <h2 class="project-title">My CV</h2>
+          <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+            ><img class="project-image" src="./images/CVimage.png" alt=""
+          /></a>
         </div>
       </div>
-      <div class="split right flex justify-center align-center">
-        <div class="right-content flex column justify-center align-center p1">
-          <img class="big-avatar" src="./images/Avatarbigger.png" alt="" />
-          <div class="icons-row p1">
-            <a href="https://github.com/Jesper-Lindstrom"
-              ><img src="./icons/giticon.svg" alt=""
-            /></a>
-            <a
-              href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
-              ><img src="./icons/linkedinicon.svg" alt=""
-            /></a>
-          </div>
-        </div>
+        <div class="left-content flex column ali p1 m1"></div>
       </div>
+      
     </div>
   </body>
 </html>
