bug fix, added selfportrait and fixed some css for iphone SE

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     ></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
-    <!-- <link rel="stylesheet" href="./styles/header-mobile.css" /> -->
+
     <link rel="stylesheet" href="./styles/alternate-content.css" />
   </head>
   <body>
@@ -86,7 +86,7 @@
       </div>
       <div class="split right flex justify-center align-center">
         <div class="right-content flex column justify-center align-center p1">
-          <img class="big-avatar" src="./images/Avatarbigger.png" alt="" />
+          <img class="big-avatar" src="./images/Selfportrait.jpg" alt="" />
           <div class="icons-row p1">
             <a class="contact-links" href="https://github.com/Jesper-Lindstrom"
               ><img src="./icons/giticon.svg" alt=""
