--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
         </div>
         <div class="project-link flex column align-center m1">
           <h2 class="project-title">norrfällsviken</h2>
-          <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
+          <a href="https://jesper-lindstrom.github.io/Norrfallsvikens-camping-remake/"
             ><img
               class="project-image"
               src="./images/NorrfallsvikenImg.png"
