--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
-    <!-- <link rel="stylesheet" href="./styles/header-mobile.css" /> -->
+
     <link rel="stylesheet" href="./styles/alternate-content.css" />
   </head>
   <body>
@@ -61,25 +61,12 @@
         </ul>
       </div>
     </header>
-    <!-- 
-    <div class="hidden">
-      <ul class="nav-items-list flex">
-        <li class="hidden-nav-item p1 flex justify-center">
-          <a class="menu-link" href="/index.html">Home</a>
-        </li>
-        <li class="hidden-nav-item p1 flex justify-center">
-          <a class="menu-link" href="/projects.html">Projects</a>
-        </li>
-        <li class="hidden-nav-item p1 flex justify-center">
-          <a class="menu-link" href="/contact.html">Contact</a>
-        </li>
-      </ul>
-    </div> -->
 
     <div class="main-content flex">
       <div class="split left flex justify-center">
         <div class="left-content flex column ali p1 m1">
           <h1 class="p1">
+            Aspiring
             <p id="changing-word">Web</p>
             Developer
           </h1>
@@ -106,7 +93,7 @@
       </div>
       <div id="fade-out" class="split right flex justify-center align-center">
         <div class="right-content flex column justify-center align-center p1">
-          <img class="big-avatar" src="./images/Avatarbigger.png" alt="" />
+          <img class="big-avatar" src="./images/Selfportrait.jpg" alt="" />
           <div class="p1">
             <a href="https://github.com/Jesper-Lindstrom"
               ><img src="./icons/giticon.svg" alt=""
