fixed avatar link for github pages

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <header>
       <div class="nav-bar flex space-between">
         <div class="user flex m1 p1 gap1 align-center">
-          <img class="avatar" src="./images/avatarbigger.png" alt="" />
+          <img class="avatar" src="./images/Avatarbigger.png"alt="" />
           <p class="my-name">Jesper Lindström</p>
           <i class="burger-menu-button fa-solid fa-bars" onclick="toggle()"></i>
         </div>
@@ -80,8 +80,11 @@
         </div>
         <div class="project-link flex column align-center m1">
           <h2 class="project-title">My CV</h2>
-          <a href="https://jesper-lindstrom.github.io/Mitt-spelprojekt/"
-            ><img class="project-image" src="./images/CVimage.png" alt=""
+          <a href="https://jesper-lindstrom.github.io/My-portfolio/"
+            ><img 
+            class="project-image" 
+            src="./images/CVimage.png" 
+            alt=""
           /></a>
         </div>
       </div>
