fixed new CV link. Removed bugged avatar image.

--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesper Lindström | Front end developer</title>
     <script src="./main.js"></script>
-    <script
-      src="https://kit.fontawesome.com/fd9786285b.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/fd9786285b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/alternate-content.css" />
@@ -18,7 +15,6 @@
     <header>
       <div class="nav-bar flex space-between">
         <div class="user flex m1 p1 gap1 align-center">
-          <img class="avatar" src="./images/Avatarbigger.png" alt="" />
           <p class="my-name">Jesper Lindström</p>
           <i class="burger-menu-button fa-solid fa-bars" onclick="toggle()"></i>
         </div>
@@ -63,14 +59,11 @@
           <div class="contact-container flex column">
             <span class="contact-links p1"
               >Email me @
-              <a href="mailto:jesperlindstrom10@gmail.com"
-                >Jesperlindstrom10@gmail.com</a
-              ></span
+              <a href="mailto:jesperlindstrom10@gmail.com">Jesperlindstrom10@gmail.com</a></span
             >
             <span class="contact-links p1">
               Linkedin @
-              <a
-                href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
+              <a href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
                 ><img class="small-icon" src="./icons/linkedinicon.svg" alt=""
               /></a>
             </span>
