--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesper Lindström | Front end developer</title>
     <script src="./main.js"></script>
-    <script
-      src="https://kit.fontawesome.com/fd9786285b.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/fd9786285b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
 
@@ -19,13 +16,8 @@
     <header>
       <div class="nav-bar flex space-between">
         <div class="user flex m1 p1 gap1 align-center">
-          <img class="avatar" src="./images/avatarbigger.png" alt="" />
           <p class="my-name">Jesper Lindström</p>
-          <i
-            id="burger-menu"
-            class="burger-menu-button fa-solid fa-bars"
-            onclick="toggle()"
-          ></i>
+          <i id="burger-menu" class="burger-menu-button fa-solid fa-bars" onclick="toggle()"></i>
         </div>
         <ul class="nav-items-list flex gap1 m1 p1">
           <li class="nav-item p1 flex justify-center">
@@ -41,7 +33,7 @@
           <li class="cv-button p1 flex justify-center">
             <a
               class="menu-link justify-center"
-              href="https://1drv.ms/w/s!AtHzcIn3gtY7g4MPm_eD1QPl5jf1Ug?e=2XigIQ"
+              href="https://1drv.ms/b/s!Au287dJ_iO26gXpN8o-1BOLIGZ1N?e=urzIE2"
               >CV</a
             >
           </li>
@@ -71,17 +63,12 @@
             Developer
           </h1>
           <h3 class="p1">
-            Hi! I'm Jesper and I am studying to become a front end developer at
-            @Medieinstitutet in Gothenburg. This is where I will show my
-            progression through theese two years where I strive to become better
-            at web development.
+            Hi! I'm Jesper and I am studying to become a front end developer at @Medieinstitutet in
+            Gothenburg. This is where I will show my progression through theese two years where I
+            strive to become better at web development.
           </h3>
           <div class="skills-wrapper flex justify-center p1">
-            <img
-              class="skill-image"
-              src="./images/html5biggerlogo.svg"
-              alt=""
-            />
+            <img class="skill-image" src="./images/html5biggerlogo.svg" alt="" />
 
             <img class="skill-image" src="./images/css3biggerlogo.svg" alt="" />
 
@@ -98,8 +85,7 @@
             <a href="https://github.com/Jesper-Lindstrom"
               ><img src="./icons/giticon.svg" alt=""
             /></a>
-            <a
-              href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
+            <a href="https://www.linkedin.com/in/jesper-lindstr%C3%B6m-818315251/"
               ><img src="./icons/linkedinicon.svg" alt=""
             /></a>
           </div>
